--- a/Resources/Private/Scss/Sections/_search.scss
+++ b/Resources/Private/Scss/Sections/_search.scss
@@ -2,6 +2,7 @@
 	@extend %header_element;
 	@extend %clearfix;
 	float: right;
+	height: (3.5 * $grid);
 	margin: (-3.5 * $grid) auto 0; // TODO: Magic number for correct alignment, try to get rid of it
 	max-width: 40em;
 	position: relative;
@@ -10,7 +11,6 @@
 	@include respond-to(medium) {
 		float: none;
 		margin-top: 0;
-		padding: (.5 * $grid) 0;
 	}
 
 	@media(max-width: ($search-width + $grid)) {
@@ -28,6 +28,7 @@
 	color: $white;
 	float: right;
 	font-size: $font-size-small;
+	line-height: ($font-size-small / $font-size * $grid);
 
 	.-show-popup & {
 		@extend .sr-only;
